--- a/PMLB-Ch01-Python机器学习的生态系统.ipynb
+++ b/PMLB-Ch01-Python机器学习的生态系统.ipynb
@@ -10339,9 +10339,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:tf36]",
+   "display_name": "tf36",
    "language": "python",
-   "name": "conda-env-tf36-py"
+   "name": "tf36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -10353,7 +10353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
